--- a/Game/Game.vcxproj.filters
+++ b/Game/Game.vcxproj.filters
@@ -103,5 +103,11 @@
     <ClInclude Include="src\systems\MitosisSystem.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="src\components\StateVectorComponent.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="src\components\EDFComponent.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
