--- a/Bayes/Bayes.vcxproj.filters
+++ b/Bayes/Bayes.vcxproj.filters
@@ -44,25 +44,22 @@
     <ClInclude Include="src\event\PauseEvent.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="src\event\RandomizeColorEvent.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
     <ClInclude Include="src\event\TitleScreenEvent.h">
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="src\factory\CreateBox.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="src\factory\CreatePlayer.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
     <ClInclude Include="src\factory\Factories.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="src\systems\MitosisSystem.h">
+    <ClInclude Include="src\systems\Systems.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="src\systems\Systems.h">
+    <ClInclude Include="src\systems\HopperPhysicsSystem.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="src\factory\CreateHopper.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
