--- a/Game/Game.vcxproj
+++ b/Game/Game.vcxproj
@@ -219,16 +219,25 @@
   <ItemGroup>
     <ClInclude Include="src\components\Components.h" />
     <ClInclude Include="src\components\PauseComponent.h" />
+    <ClInclude Include="src\components\TargetComponent.h" />
     <ClInclude Include="src\components\TitleScreenComponent.h" />
+    <ClInclude Include="src\components\TowerComponent.h" />
     <ClInclude Include="src\event\Events.h" />
     <ClInclude Include="src\event\GameStartEvent.h" />
     <ClInclude Include="src\event\PauseEvent.h" />
     <ClInclude Include="src\event\RandomizeColorEvent.h" />
     <ClInclude Include="src\event\TitleScreenEvent.h" />
     <ClInclude Include="src\factory\CreateBox.h" />
+    <ClInclude Include="src\factory\CreateBullet.h" />
     <ClInclude Include="src\factory\CreatePlayer.h" />
+    <ClInclude Include="src\factory\CreateSentry.h" />
     <ClInclude Include="src\factory\Factories.h" />
+    <ClInclude Include="src\statemachine\FiringStateMachine.h" />
+    <ClInclude Include="src\statemachine\states\FiringState.h" />
+    <ClInclude Include="src\statemachine\states\DisabledState.h" />
+    <ClInclude Include="src\statemachine\states\StandbyState.h" />
     <ClInclude Include="src\systems\Systems.h" />
+    <ClInclude Include="src\systems\TargetSystem.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
