--- a/Engine/Engine.vcxproj.filters
+++ b/Engine/Engine.vcxproj.filters
@@ -356,6 +356,9 @@
     <ClInclude Include="engine\physics\collision\CollisionManifold.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="engine\physics\collision\CollisionFunctions.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <None Include="dlls\libfreetype-6.dll" />
